<resources>
    <string name="app_name">Books Api</string>
    <string name="error_data_message">Error loading data from Google Books API</string>
    <string name="search">Search</string>

    <string name="hint_title">Insert Title</string>
    <string name="hint_publisher">Insert Publisher</string>
    <string name="hint_author">Insert Author(s)</string>
    <string name="hint_ISBN">Insert ISBN</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="no_search_data">Please insert valid search terms</string>
</resources>
