<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="24dp"
        android:hint="@string/hint_title"/>

    <EditText
        android:id="@+id/etAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="24dp"
        android:hint="@string/hint_author"/>

    <EditText
        android:id="@+id/etPublisher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="24dp"
        android:hint="@string/hint_publisher"/>

    <EditText
        android:id="@+id/etIsbn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_ISBN"
        android:layout_marginTop="24dp"/>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_gravity="center"
        android:background="@drawable/search_button"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        android:textColor="#FFFF"/>
</LinearLayout>